2006-05-29  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.c: XML data check in xdb_sql results

2006-05-27  Matthias Wimmer  <m@tthias.eu>

    * jabber.xml.dist.in: fixing but in jabber:iq:register for xdb_sql

2006-05-24  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_presence.c: (de)serialize state of mod_presence

2006-05-23  Matthias Wimmer  <m@tthias.eu>

    * jsm/deliver.c: do not auto-unsubscribe on unavailable presence
    * jsm/utils.c: do not send presences after unsubscription
    * jsm/jsm.h: same
    * jsm/modules/mod_roster.c: same
    * jsm/jsm.h: keep a list of JIDs a user is interested in their presence
    * jsm/util.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_presence.c: completing subscription syncronization

2006-05-22  Matthias Wimmer  <m@tthias.eu>

    * jsm/serialization.c: correctly restoring session start time
    * jsm/deliver.c: first part of inter-server subscription syncronization
    * jsm/modules/mod_presence.c: same

2006-05-21  Matthias Wimmer  <m@tthias.eu>

    * jsm/sessions.c: generate more random session IDs
    * jabberd/jabberd.h: notify the instance of their hosts
    * jabberd/deliver.c: same
    * jsm/jsm.c: same
    * jsm/jsm.h: load serialized session manager state on startup
    * jsm/serialization.c: same
    * jsm/modules/mod_agents.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_filter.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_log.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_xml.c: same
    * jabberd/lib/jid.c: declaring 2nd param of jid_set as const char *
    * jabberd/lib/jabberdlib.h: same

2006-05-20  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberdlib.h: better memory performance for xhash
    * jabberd/lib/xhash.c: same

2006-05-05  Matthias Wimmer  <m@tthias.eu>
